# MaatProof

./: .gitignore  CLAUDE.md  COMPLEXITY.md  CONSTITUTION.md  README.md  WHITEPAPER.md  pyproject.toml  result.md
PYTHON/: README.md
RUST/: Cargo.toml  README.md
RUST/src/: avm.rs  canonical.rs  certificate.rs  chain.rs  core.rs  evidence.rs  ledger.rs  lib.rs  orchestrator.rs  pipeline.rs  pod.rs  policy.rs  proof.rs  vrp.rs
RUST/src/layers/: agent.rs  deterministic.rs  mod.rs
agents/: human-approval-agent.md  orchestrator-agent.md  security-agent.md  validator-agent.md
avm/: deterministic-replay.md  execution-model.md  trace-format.md
constitution/: CONSTITUTION.md
contracts/: DeployPolicy.sol  Governance.sol  MaatToken.sol  Slashing.sol  Vesting.sol
docs/: 00-overview.md  01-architecture.md  02-consensus-proof-of-deploy.md  03-agent-virtual-machine.md  04-deployment-contracts.md  05-tokenomics.md  06-security-model.md  07-regulatory-compliance.md  08-roadmap.md  09-references.md
examples/: basic-deploy.md  proof_of_deploy_colab.ipynb  rollback.md
integrations/: ci-adapter.md  github-app.md  gitlab.md  kubernetes.md
maatproof/: __init__.py  chain.py  evidence.py  exceptions.py  models.py  orchestrator.py  pipeline.py  proof.py
maatproof.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
specs/: aci-acd-workflow-spec.md  ada-spec.md  agent-identity-spec.md  api-spec.md  audit-logging-spec.md  autonomous-deployment-authority.md  avm-spec.md  core-pipeline-infra-spec.md  deployment-contract-spec.md  deterministic-reasoning-engine.md  dre-cicd-spec.md  (+19 more)
(+49 files in other folders)
