[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maatproof"
version = "0.1.0"
description = "Cryptographically verifiable, deterministic LLM reasoning for the ACI/ACD pipeline"
readme = "README.md"
license = { text = "CC0-1.0" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools.packages.find]
where = ["."]
include = ["maatproof*"]
