[package]
name = "maatproof-rust"
version = "0.1.0"
edition = "2021"
description = "Rust reference implementation of MaatProof proof-carrying deployment primitives"
license = "CC0-1.0"

[dependencies]
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
